[package]
name = "esp32s2-powermeter"
version = "0.1.0"
authors = ["maxwen <max.weninger@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp32s2-hal = { version = "0.15.0", features = ["embassy", "embassy-time-timg0", "embassy-executor-thread", "async", "psram-2m"] }
esp-backtrace = { version = "0.11.0", features = ["esp32s2", "panic-handler", "exception-handler", "println"] }
esp-println = { version = "0.9.0", features = ["esp32s2", "log"] }
log = { version = "0.4.20" }
esp-alloc = { version = "0.3.0" }
embassy-time = { version = "0.3.0" }
embassy-executor = { version = "0.5.0", features = ["nightly", "integrated-timers"] }
embassy-sync = "0.5.0"
embassy-net = { version = "0.4.0", features = ["tcp", "udp", "dhcpv4", "dns"] }
embassy-embedded-hal = { version = "0.1.0" }
embassy-futures = "0.1.1"
st7789 = { path = "/home/maxl/esp32/rust/st7789" }
embedded-graphics = "0.8.1"
display-interface-spi = "0.4.1"
esp32-utils-crate = { path = "../esp32-utils-crate" }
static_cell = { version = "2.0.0", features = ["nightly"] }
ina219_rs = "0.5.1"
heapless = { version = "0.7.15", default-features = false, features = ["serde"] }
eg-seven-segment = "0.2.0"
embedded-hal-async = "1.0.0"
enum-iterator = "2.0.0"
profont = "0.7.0"

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3
debug = true

[patch.crates-io]
ina219_rs = { path = "/home/maxl/esp32/rust/ina219" }